usw d3 zoom to prevent label cutoff and center graph

--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,14 @@
 .svg-container {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 0.5%;
+    left: 0.5%;
     width: 99%;
     height: 99%;
+}
+
+.svg-container svg {
+    width: 100%;
+    height: 100%;
 }
 
 .person {
